<resources>
    <string name="app_name">Mahao</string>
    <string name="title_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">or</string>
    <string name="forgot_password_query">Forgot Password?</string>
    <string name="log_in_text">Log in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="and_find_the_house_you_are_looking_for">and find the house you are looking for</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the">I agree to the </string>
    <string name="terms_of_service"><u><b>Terms of Service</b></u></string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in"><u><b>Sign In</b></u></string>
    <string name="write_email_address">Please write your email address to receive a confirmation code to set a new password</string>
    <string name="confirm_mail">Confirm Mail</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="verification_code_sent_to">Verification code sent to: </string>
    <string name="resend_confirmation_code"> Resend Confirmation Code</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="title_properties">Properties</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About</string>
    <string name="hello_s">Hello %1$s</string>
    <string name="pata_hao_yako">Pata hao yako</string>
    <string name="show_more">Show More</string>
    <string name="search">Search</string>
    <string name="property_name">Property Name</string>
    <string name="category">Category</string>
    <string name="bed">Bed</string>
    <string name="bath">Bath</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="feature_image">Feature Image</string>
    <string name="amenities">Amenities</string>
    <string name="edit_amenities">Edit Amenities</string>
    <string name="gallery">Gallery</string>
    <string name="add_gallery_image">Add Gallery Image</string>
    <string name="save">Save</string>
    <string name="related">Related</string>
    <string name="user">User</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="verified">Verified</string>
    <string name="enabled">Enabled</string>
    <string name="delete">Delete</string>
    <string name="search_location">Search Location</string>
    <string name="add_your_location">Add your Location</string>
    <string name="add_location">Add Location</string>
    <string name="amenity">Amenity</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="no_properties">No Properties Found</string>
    <string name="users">Users</string>
    <string name="categories">Categories</string>
    <string name="log_out">Log Out</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="no_images">No Images</string>
    <string name="no_amenities">No Amenites</string>
    <string name="no_users">No Users</string>
    <string name="add_user">Add User</string>
    <string name="background">background</string>
    <string name="icon">icon</string>
    <string name="no_categories">No Categories</string>
    <string name="add_category">Add Category</string>
    <string name="add_amenity">Add Amenity</string>
    <string name="server_error">Apologies, but something went wrong on our end. Please try again later</string>
    <string name="authentication_error">You need to be logged in to perform this action</string>
    <string name="authorization_error">You are not authorized to perform this action</string>
    <string name="validation_error">Some of the fields you submitted were invalid</string>
    <string name="please_enter_valid_email">Please enter a valid email address</string>
    <string name="please_enter_valid_password">Please enter a password with at least 6 characters</string>
    <string name="unknown_error">An unknown error occurred. Please try again later</string>
    <string name="register">Register</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="passwords_need_to_match">Passwords do not match</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="enter_valid_phone">Enter a valid Kenyan phone number</string>
    <string name="recover_password">Recover Password</string>
    <string name="d_beds">%1$d beds</string>
    <string name="d_baths">%1$d baths</string>
    <string name="d_amens">%1$d amens</string>
    <string name="kes_f_month">KES. %1$.0f/m</string>
    <string name="recommended">Recommended</string>
    <string name="nearby">Nearby</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="favorite">Favorite</string>
    <string name="personal">Personal</string>
    <string name="edit">Edit</string>
    <string name="delete_s">Delete %1$s</string>
    <string name="delete_prompt_text">Are you sure you want to delete this %1$s? This action cannot be undone!</string>
    <string name="successfully_deleted_s">Successfully deleted %1$s</string>
    <string name="category_created_successfully">Category created successfully</string>
    <string name="amenity_created_successfully">Amenity created successfully</string>
    <string name="disable">Disable</string>
    <string name="verify">Verify</string>
    <string name="unverify">Unverify</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="create_dummy_data">Create Dummy Data</string>
    <string name="create_feedbacks">Create Feedbacks</string>
    <string name="enable_your_location">Enable you location for correct map functionality</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="none">None</string>
    <string name="infinite">Infinite</string>
    <string name="d_filter_radius">%1$.0fKM radius</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="about_mahao">About Mahao</string>
    <string name="licenses">Licenses</string>
    <string name="share_message">Find your next home easily using Mahao. Get it at https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="send_email">Send Email</string>
    <string name="title_map">Map</string>
    <string name="password_recovery_email_sent">Password recovery email sent to %1$s</string>
    <string name="password_reset_successfully">The password was reset successfully</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="property_saved_successfully">Property saved successfully</string>
</resources>