<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/size_8"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginEnd="@dimen/size_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/log_in_text"
            android:textSize="@dimen/text_32"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_200"
            android:layout_margin="@dimen/size_16"
            app:lottie_rawRes="@raw/home_logo"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/email_address"
            style="@style/Theme.Mahao.FormTextInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_email_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Some text"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/password"
            style="@style/Theme.Mahao.FormTextInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Some text"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:layout_gravity="end"
            android:text="@string/forgot_password_query"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:text="@string/login"
            style="@style/Theme.Mahao.FormButton"
            android:enabled="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:orientation="horizontal"
            android:gravity="center">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?colorOnSurface"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8"
                android:layout_marginEnd="@dimen/size_8"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?colorOnSurface"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:text="@string/create_an_account"
            style="@style/Theme.Mahao.FormButton"/>
    </LinearLayout>

</ScrollView>