<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.properties.single.EditPropertyFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/property_name"
            style="@style/Theme.Mahao.FormTextInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_location_city_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Some property name"
                android:inputType="text|textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            style="@style/Theme.Mahao.FormTextInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_filter_alt_24">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Bedsitters"
                android:hint="@string/category"
                android:completionThreshold="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/location"
            style="@style/Theme.Mahao.FormTextInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="The location and coordinates"
                android:inputType="text|textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginEnd="@dimen/size_8"
                android:hint="@string/bed"
                style="@style/Theme.Mahao.FormTextInputLayout"
                app:startIconDrawable="@drawable/ic_baseline_king_bed_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="3"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/size_16"
                android:layout_marginStart="@dimen/size_8"
                android:hint="@string/bath"
                style="@style/Theme.Mahao.FormTextInputLayout"
                app:startIconDrawable="@drawable/ic_baseline_bathtub_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/price"
            style="@style/Theme.Mahao.FormTextInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_attach_money_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="5000"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:hint="@string/description"
            style="@style/Theme.Mahao.FormTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Some property name"
                android:gravity="top"
                android:minLines="6"
                android:inputType="text|textCapSentences|textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            app:cardCornerRadius="@dimen/size_8"
            app:cardBackgroundColor="?colorPrimaryVariant"
            android:foreground="?selectableItemBackground">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200"
                android:background="?selectableItemBackground"/>

            <TextView
                android:id="@+id/textView_edictCourse_noThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature_image"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?colorOnPrimary"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/amenities"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_category"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginStart="@dimen/size_32"
            android:layout_marginEnd="@dimen/size_32"
            android:text="@string/edit_amenities"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/gallery"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/item_gallery"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginStart="@dimen/size_32"
            android:layout_marginEnd="@dimen/size_32"
            android:text="@string/add_gallery_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginBottom="@dimen/size_24"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_16"
            style="@style/Theme.Mahao.FormButton"
            android:text="@string/save"/>
    </LinearLayout>

</ScrollView>