<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.forgot.ForgotPasswordFragment">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/forgot_password_query"
                android:textSize="@dimen/text_32"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_email_address"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200"
                android:layout_margin="@dimen/size_16"
                app:lottie_rawRes="@raw/forgot_password"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:hint="@string/email_address"
                style="@style/Theme.Mahao.FormTextInputLayout"
                app:startIconDrawable="@drawable/ic_baseline_email_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Some text"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                android:text="@string/confirm_mail"
                style="@style/Theme.Mahao.FormButton"
                android:enabled="false"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>