<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.more.MoreFragment">

    <LinearLayout
        android:id="@+id/linearLayout_more_privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_more_privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Mahao.MoreText"
            android:text="@string/privacy_policy"
            app:drawableStartCompat="@drawable/ic_baseline_privacy_tip_24"
            android:drawablePadding="@dimen/size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_more_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_more_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Mahao.MoreText"
            android:text="@string/terms_and_conditions"
            app:drawableStartCompat="@drawable/ic_baseline_confirmation_number_24"
            android:drawablePadding="@dimen/size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_more_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_more_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Mahao.MoreText"
            android:text="@string/title_about"
            app:drawableStartCompat="@drawable/ic_baseline_info_24"
            android:drawablePadding="@dimen/size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_more_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_more_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Mahao.MoreText"
            android:text="@string/share"
            app:drawableStartCompat="@drawable/ic_baseline_share_24"
            android:drawablePadding="@dimen/size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_more_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_more_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Mahao.MoreText"
            android:text="@string/rate"
            app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
            android:drawablePadding="@dimen/size_16"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"/>
    </LinearLayout>


</LinearLayout>