<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.auth.forgot.VerificationCodeFragment">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/verify_email_address"
                android:textSize="@dimen/text_32"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code_sent_to"/>
                <TextView
                    android:id="@+id/textView_verificationCode_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorPrimary"
                    tools:text="email@email.com"/>
            </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView_verificationCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200"
                android:layout_margin="@dimen/size_16"
                app:lottie_rawRes="@raw/email_send"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <ke.co.tonyoa.mahao.app.utils.views.OtpComponent
                android:id="@+id/otpComponent_verificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                app:length="4"
                tools:otp="1234"/>

            <Button
                android:id="@+id/button_VerificationCode_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24"
                android:text="@string/confirm_code"
                style="@style/Theme.Mahao.FormButton"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:id="@+id/textView_verificationCode_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="00:59"
                    android:textColor="?colorPrimary"/>
                <View
                    android:layout_width="@dimen/size_8"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/textView_verificationCode_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_confirmation_code"
                    android:textStyle="bold"
                    android:background="?selectableItemBackground"
                    android:enabled="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>